--- a/index.html
+++ b/index.html
@@ -86,16 +86,17 @@
         </ul>
       </div> -->
 
+      <main>
       <div id="carousel" class="carousel slider">
         <ul id="slides-container" class="slides">
           <li class="slide item active">
             <div class="slide-content">
               <div class="text-block-1">
-                <h2>Заголовок 1</h2>
-                <p>Описание первого слайда...</p>
+                <h2>-10% on all products</h2>
+                <p>until the end of the week</p>
               </div>
               <div class="image-block">
-                <img src="./assets/images/skateboarder-1.jpeg" alt="Картинка 1">
+                <img src="./assets/images/pexels-messalaciulla-1018482.jpg" alt="Картинка 1">
               </div>
             </div>
           </li>
@@ -106,7 +107,7 @@
                 <p>Описание второго слайда...</p>
               </div>
               <div class="image-block">
-                <img src="https://via.placeholder.com/500" alt="Картинка 2">
+                <img src="./assets/images/pexels-messalaciulla-1018484.jpg" alt="Картинка 2">
               </div>
             </div>
           </li>
@@ -117,12 +118,35 @@
                 <p>Описание третьего слайда...</p>
               </div>
               <div class="image-block">
-                <img src="https://via.placeholder.com/500" alt="Картинка 3">
+                <img src="./assets/images/pexels-sleeba-thomas-156395977-30788855.jpg" alt="Картинка 3">
+              </div>
+            </div>
+          </li>
+          <li class="slide item">
+            <div class="slide-content">
+              <div class="text-block-4">
+                <h2>Заголовок 4</h2>
+                <p>Описание третьего слайда...</p>
+              </div>
+              <div class="image-block">
+                <img src="./assets/images/pexels-stephendn-131014.jpg" alt="Картинка 3">
+              </div>
+            </div>
+          </li>
+          <li class="slide item">
+            <div class="slide-content">
+              <div class="text-block-5">
+                <h2>Заголовок 5</h2>
+                <p>Описание третьего слайда...</p>
+              </div>
+              <div class="image-block">
+                <img src="./assets/images/pexels-carlos-baeza-546142-2777671.jpg" alt="Картинка 3">
               </div>
             </div>
           </li>
         </ul>
       </div>
+    </main>
       
       
   
