--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         <a  href="#"><i class="fa-regular fa-heart" ></i></a>
           <a   href="#"><i class="fa-solid fa-cart-shopping" ></i></a>
         </div>
+
+        <button class="menu-toggle" id="menu-toggle">
+          ☰
+        </button>
       </div>
     </div>
   </header>
