--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header-container">
       <div class="menu">
       <div class="header-logo">
-        <a class="menu-item" href="#"><img src="./assets/images/logo.png" alt="logo" height="40px"></a>
+        <a class="menu-item" href="#"><img class="header-logo--size" src="./assets/images/logo.png" alt="logo"></a>
       </div>
 
 
@@ -134,7 +134,15 @@
       </div>
     </main>
       
-      <footer></footer>
+      <footer class="company-details">
+        <div class="company-details-wrapper">
+          <div class="company-adress">
+            <strong>Cool Sport sp. z o.o. sp. k. </strong>  KRS: 1111111111 District Court of Kraków-Sierdmiescie, XI Commercial Department of the National Court Register NIP: 555-555-555/ REGON: 0000000 BDO: 000025311 Headquarters: Handlowców 2, 32-085 Modlniczka, Poland</div>
+          <div class="company-copyright">Copyright © 2003-2025 SUPER-SHOP. All rights reserved.</div>
+        </div>
+          <div class="company-security"><span class="company-security-text">Data security </span> <i class="fa-solid fa-fish fa-2xl company-icon-label"></i></div>
+      
+      </footer>
   
 
 
